# a_star_plugin

./: CMakeLists.txt  global_planner_plugin.xml  package.xml
include/global_planner/: example_base.h
launch/: a_star_test.launch  move_base.launch
param/: global_costmap_params.yaml  local_costmap_params.yaml
rviz/: a_star.rviz
src/: a_star_plugin.cpp  a_star_plugin_base.cpp
